<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btConfiguracao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btLedVermelho"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_marginStart="128dp"
        android:text="@string/led_vermelho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/btLedVerde"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:text="@string/led_verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/btLedLaranja"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_marginStart="76dp"
        android:text="@string/led_laranja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/btLedAmarelo"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_marginStart="180dp"
        android:text="@string/led_amarelo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/btLedAzul"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_marginStart="244dp"
        android:text="@string/led_azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/txtResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btPiscarLeds"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="204dp"
        android:text="@string/piscar_leds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btAcendeTodos"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/acende_todos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPiscarLeds" />

    <Button
        android:id="@+id/btApagaTodos"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="88dp"
        android:text="@string/apaga_todos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btAcendeTodos"
        app:layout_constraintStart_toStartOf="@+id/btAcendeTodos" />

    <ImageButton
        android:id="@+id/btRefresh"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="27dp"
        android:layout_height="28dp"
        android:layout_marginStart="300dp"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/refresh" />

    <ImageButton
        android:id="@+id/btConfig"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        android:onClick="irParaConfiguracao"
        app:srcCompat="@drawable/configuracao" />

    <TextView
        android:id="@+id/txtStatusLedVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btLedVerde"
        app:layout_constraintEnd_toEndOf="@+id/btLedVerde"
        app:layout_constraintStart_toStartOf="@+id/btLedVerde" />

    <TextView
        android:id="@+id/txtStatusLedVermelho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btLedVermelho"
        app:layout_constraintEnd_toEndOf="@+id/btLedVermelho"
        app:layout_constraintStart_toStartOf="@+id/btLedVermelho" />

    <TextView
        android:id="@+id/txtStatusLedAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btLedAzul"
        app:layout_constraintEnd_toEndOf="@+id/btLedAzul" />

    <TextView
        android:id="@+id/txtStatusLedLaranja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btLedLaranja"
        app:layout_constraintEnd_toStartOf="@+id/btLedVermelho"
        app:layout_constraintStart_toStartOf="@+id/btLedVermelho" />

    <TextView
        android:id="@+id/txtStatusLedAmarelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btLedAmarelo"
        app:layout_constraintEnd_toEndOf="@+id/btLedVermelho"
        app:layout_constraintStart_toEndOf="@+id/btLedVermelho" />

</androidx.constraintlayout.widget.ConstraintLayout>

